--- a/index.html
+++ b/index.html
@@ -180,7 +180,27 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+var fireballSize = 22;
+var wizardSpeed = 5;
+var wizardWidth = 70;
 
+var getFireballSpeed = function(left) {
+  return left ? 5 : 2;
+};
+
+var getWizardHeight = function(wizardWidth) {
+  return getWizardHeight = 1.337 * wizardWidth;
+};
+
+var getWizardX = function(width) {
+  return getWizardX = width/2 - (wizardWidth/2);
+};
+
+var getWizardY = function(height) {
+  return getWizardY = height/3 - getWizardHeight;
+};
+</script>
 <script src="js/game.js"></script>
 
 </body>
