--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ var getWizardY = function(height) {
   return getWizardY = height/3 - getWizardHeight;
 };
 </script>
+<script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
