Разделил по модулям

--- a/index.html
+++ b/index.html
@@ -202,9 +202,13 @@ var getWizardY = function(height) {
   return getWizardY = height/3 - getWizardHeight;
 };
 </script>
+<script src="js/randomValue.js"></script>
+<script src="js/userdialog.js"></script>
 <script src="js/setup.js"></script>
+<script src="js\wizardChange.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
+
 
 </body>
 </html>
